k8s/apps/forgejo/forgejo/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  hostnames:
    - forgejo.siron.casa
  parentRefs:
    - name: external
      namespace: network
  rules:
    - backendRefs:
        - kind: Service
          name: forgejo-http
          port: 3000
